# tiny-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
data/shaders/: shaders.hlsl
src/: main.cpp  tiny_renderer.cpp
src/core/: application.cpp  application.hpp  assert.hpp  commandline_args.cpp  commandline_args.hpp  engine.cpp  engine.hpp  renderer.cpp
tiny-engine/: CMakeLists.txt  engine_config.h.in
tiny-engine/include/tiny_engine/: application.cpp  application.hpp  defines.hpp  engine.cpp  engine.hpp  error_handling.hpp  renderer.hpp
tiny-engine/include/tiny_engine/core/: commandline_args.cpp  commandline_args.hpp  dylib_loading.cpp  dylib_loading.hpp  logging.cpp  logging.hpp  logging.inl  renderer.cpp  renderer.hpp  window_system.cpp  window_system.hpp
tiny-engine/include/tiny_engine/rendering/: d3d12_renderer.hpp  render_backend.hpp  render_context.cpp  render_context.hpp  renderer.hpp  vulkan_renderer.hpp
tiny-engine/src/: application.cpp  commandline_args.cpp  engine.cpp  renderer.cpp
tiny-engine/src/rendering/d3d12/: render_backend_d3d12.cpp  render_backend_d3d12.hpp
tiny-engine/src/rendering/vulkan/: render_backend_vulkan.cpp  render_backend_vulkan.hpp
tiny-engine/test/: CMakeLists.txt  commandline_args_test.cpp  dylib_loading_test.cpp  testdylib.cpp
tiny-renderer/: CMakeLists.txt  app_config.h.in
tiny-renderer/src/: tiny_renderer.cpp
